syntax = "proto3";

package michilu.boilerplate.pb;

option go_package = "pb";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

// DebugClient is Entity
message DebugClient {
  string id = 1 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
}
