syntax = "proto3";

package michilu.boilerplate.pb;

option go_package = "pb";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

// Key is Entity.
message Key {
  bytes key = 1 [
    (validate.rules).bytes = {
      min_len: 1
    }
  ];
}

// KeyValue is Entity.
message KeyValue {
  bytes key = 1 [
    (validate.rules).bytes = {
      min_len: 1
    }
  ];
  bytes value = 2 [
    (validate.rules).bytes = {
      min_len: 1
    }
  ];
}

// KeyPrefix is ValueObject.
message KeyPrefix {
  bytes prefix = 1 [
    (validate.rules).bytes = {
      min_len: 1
    }
  ];
}
